# CRM-RMM

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py  models.py  schemas.py  services.py
docs/: cahier-des-charges-crm-rmm-psa.md
frontend/: package.json
frontend/app/: globals.css  layout.tsx
frontend/app/alerts/: page.tsx
frontend/app/clients/: page.tsx
frontend/app/contracts/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/interventions/: page.tsx
frontend/app/invoices/: page.tsx
frontend/app/machines/: page.tsx
frontend/app/playbooks/: page.tsx
frontend/app/prospects/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/tickets/: page.tsx
frontend/components/: page-header.tsx  sidebar.tsx
frontend/lib/: mock-data.ts
src/crm_rmm/: __init__.py  models.py  service.py
tests/: test_api.py  test_service.py
